force-app/main/default/objects/Dummy07__c/Dummy07__c.object-meta.xml
<CustomObject>
    <label>Dummy07</label>
    <nameField>
        <label>Dummy07 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy07</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>