force-app/main/default/objects/Dummy07__c/fields/FooBar031__c.field-meta.xml
<CustomField>
    <fullName>FooBar031__c</fullName>
    <label>FooBar031</label>
    <length>255</length>
    <type>Text</type>
</CustomField>