force-app/main/default/objects/Dummy07__c/fields/FooBar060__c.field-meta.xml
<CustomField>
    <fullName>FooBar060__c</fullName>
    <label>FooBar060</label>
    <length>255</length>
    <type>Text</type>
</CustomField>