force-app/main/default/objects/Dummy07__c/fields/FooBar092__c.field-meta.xml
<CustomField>
    <fullName>FooBar092__c</fullName>
    <label>FooBar092</label>
    <length>255</length>
    <type>Text</type>
</CustomField>